--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,10 +78,6 @@ div.burger-menu i{
     width: 40px;
 }
 
-article div.main-article{
-    width: 100%;
-}
-
 .price{
     font-size: 18px;
 }
@@ -97,16 +93,23 @@ h3,
     color: #666;
 }
 
+.description{
+    display: none;
+    margin-top: 20px;
+}
+
 section.banner img{
     width: 100%;
 }
 
 main{
     width: 90%;
+    margin: 0 auto;
 }
 
 main section article{
-    background-color: #fff;
+    background-color: #fff;    
+    margin: 10px 0px;
 }
 
 main section article img{
@@ -118,4 +121,38 @@ main section article i,
     color: #39b54a;
 }
 
+main section article i{
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    text-align: center;
+    box-sizing: border-box;
+}
 
+main section h3{
+    margin: 20px 0px;
+}
+
+article div.main-article{
+    width: 100%;
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+}
+
+@media (min-width: 361px){
+    main section article .description{
+        display: block;
+    }
+
+    main section article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+}
+
+@media (min-width: 769px){
+
+}
